# pimglib

./: Makefile.am  Makefile.in  README  configure  configure.in  initialize  license.txt
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
example/angifs/: pmain.c
example/basic/: pmain.c
example/capture/: pmain.c
example/changecol/: pmain.c
example/save/: pmain.c
examples/: README
examples/angifs/: pmain.c
examples/changecol/: Makefile
examples/screen_capture/: Makefile  pmain.c
examples/zoom/: pmain.c
src/: Makefile.am  Makefile.in  changecol.c  dither.c  pdefs.h  pimglib.h  plib.c  plib.h  scrshot.c  subimage.c  winimg.c  zoom.c
src/formats/: Makefile.am  Makefile.in  pimg_bmp.c  pimg_bmp.h  pimg_gif.c  pimg_gif.h  pimg_jpeg.c  pimg_jpeg.h  pimg_pgm.c  pimg_pgm.h  pimg_png.c  pimg_png.h  pimg_pnm.c  pimg_pnm.h  pimg_xpm.c  pimg_xpm.h
